# ECE421-GroupProject1

./: .gitignore  .project  APIfinance.java  Makefile  README.md  build.gradle
.github/workflows/: connect4-coms.yml  connect4-docker.yml  connect4-lib.yml  connect4-server.yml  connect4-web.yml  rust.yml  rust_black_tree.yml
connect4/: Cargo.toml  Dockerfile  README.md  Readmd.md  docker-compose.yml  main.js  web
connect4-server/: Cargo.toml
connect4-server/src/: main.rs
connect4/connect4-cli/: Cargo.toml
connect4/connect4-cli/src/: lib.rs
connect4/connect4-coms/: Cargo.toml
connect4/connect4-coms/src/: lib.rs  status.rs  types.rs
connect4/connect4-lib/: Cargo.toml  README.md
connect4/connect4-lib/src/: games.rs  io.rs  lib.rs  main.rs
connect4/connect4-lib/src/ai/: bitboard.rs  connect.rs  mod.rs
connect4/connect4-lib/src/game/: chip.rs  mod.rs
connect4/connect4-server/: Cargo.toml  README.md
connect4/connect4-server/src/: .gamehelper.rs.swp  .jwtHelper.rs.swp  dbhelper.rs  exampleDB.rs  gamehelper.rs  games.rs  jwtHelper.rs  jwthelper.rs  main.rs  player.rs  refresh-curl.sh  statshelper.rs
connect4/connect4-server/src/ai/: bitboard.rs  mod.rs
connect4/connect4-server/src/server/: main.rs
connect4/connect4-server/src/web/: canvas.rs
connect4/connect4-web/: .gitignore  Cargo.toml  README.md  build  index.html  web  web_dev
connect4/connect4-web/src/: a_component.rs  canvas.rs  coms.rs  constants.rs  controller.rs  game_manager.rs  game_object.rs  jq.rs  lib.rs  main.rs  navbar.rs  storage.rs  webio.rs
connect4/connect4-web/src/components/: a_component.rs  b_component.rs  canvas.rs  game_component.rs  game_config.rs  homebutton.rs  homescreen.rs  icon.rs  menu.rs  menubutton.rs  mod.rs  navbar.rs  router.rs  signin.rs  webio.rs  welcome.rs
connect4/connect4-web/src/views/: game_finalized.rs  game_screen.rs  mod.rs  online_config.rs  settings.rs  statistics.rs  view_games.rs
connect4/connect4-web/src/web/: canvas.rs  mod.rs
connect4/connect4-website-server/: Cargo.toml
connect4/connect4-website-server/src/: main.rs
connect4/report/: .gitignore  Makefile  report.tex
connect4/src/: bitboard.rs  canvas.rs  game.rs  games.rs  io.rs  lib.rs  main.rs  table_gen.rs  web.rs
connect4/src/ai/: bitboard.rs  connect.rs  mod.rs  searcher.rs
connect4/src/game/: chip.rs  connect4.rs  mod.rs  toto.rs
connect4/src/server/: main.rs
connect4/src/web/: canvas.rs  controller.rs  mod.rs  webio.rs
report/: .gitignore  report.tex
rust_black_tree/: Cargo.toml  README.md
rust_black_tree/benches/: my_benchmark.rs
rust_black_tree/report/: .gitignore  Makefile  report.tex
rust_black_tree/src/: avltree.rs  benchmark.rs  lib.rs  main.rs  node.rs  prettynodeprinter.rs  rbtree.rs  tree.rs  unbalancetree.rs
src/: APIFinance.java  Main.java  PickShareFunctional.java  PickShareImperative.java  ShareInfo.java  ShareUtil.java  Shares.java  UnitTest.java
src/main/java/: Main.java  PickShareFunctional.java
src/test/java/: UnitTest.java
stocks/: .gitignore  Makefile  README.md  api-key  build.gradle  settings.gradle
stocks/src/main/java/: Main.java  Shares.java
