[package]
name = "connect4"
version = "0.1.0"
authors = ["Jacob Reckhard <jacobreckhard@gmail.com>", "Arun Woosaree <arun@woosaree.xyz>"]
edition = "2018"
default-run="connect_game"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-Ctarget-cpu=native"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.13.2", features = ["std_web"] }
wasm-bindgen = "0.2.59"
rand = "0.7.3"

[dependencies.web-sys]
web-sys = "0.3.36"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]

[lib]
name="connect_game"
path="src/lib.rs"
#crate-type = ["cdylib"] # this breaks tablegen and connect_game binaries

[[bin]]
name="connect_game"
path="src/main.rs"
