[package]
name = "connect4"
version = "0.1.0"
authors = ["Jacob Reckhard <jacobreckhard@gmail.com>", "Arun Woosaree <arun@woosaree.xyz>"]
edition = "2018"
default-run="connect_game"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-Ctarget-cpu=native"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.14.2", features = ["web_sys"] }
wasm-bindgen = "0.2.59"
rand = "0.7.3"
rayon = "1.3.0"
yew-router = { version = "0.11.0", features = ["web_sys"] }

[dependencies.web-sys]
web-sys = "0.3.36"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'DomRect',
  'MouseEvent',
  'console',
  'EventListener',
]

[lib]
name="connect_game"
path="src/lib.rs"
# crate-type = ["cdylib"] # this breaks connect_game binaries
crate-type = ["cdylib", "rlib"]

[[bin]]
name="connect_game"
path="src/main.rs"
