[package]
name = "connect4"
version = "0.1.0"
authors = ["Jacob Reckhard <jacobreckhard@gmail.com>", "Arun Woosaree <arun@woosaree.xyz>"]
edition = "2018"
default-run="connect_game"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-Ctarget-cpu=native"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.14.3", features = ["web_sys"] }
wasm-bindgen = "0.2.60"
rand = "0.7.3"
rayon = "1.3.0"
yew-router = { version = "0.11.0", features = ["web_sys"] }
wasm-bindgen-futures = "0.4.10"
js-sys = "0.3.37"
mongodb = "0.9.2"
bson = "0.14.1"
jsonwebtoken = "7.1.0"

[dependencies.web-sys]
web-sys = "*"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'DomRect',
  'MouseEvent',
  'console',
  'EventListener',
]
version = "0.3.37"

[lib]
name="connect_game"
path="src/lib.rs"
# crate-type = ["cdylib"] # this breaks connect_game binaries
crate-type = ["cdylib", "rlib"]

[[bin]]
name="connect_game"
path="src/main.rs"

[[bin]]
name="server"
path="src/server/main.rs"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]

[dependencies.rocket]
version = "*"
default-features = false