[package]
name = "rust_black_tree"
version = "0.1.0"
authors = ["Jacob Reckhard <jacobreckhard@gmail.com>", "Arun Woosaree <arun@woosaree.xyz>", "Alexander Rostron"]
edition = "2018"
exclude = [
    "report/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1.1"
term_size = "0.3.1"
rustyline = "6.0.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

[lib]
name = "rust_black_trees"
path = "src/lib.rs"

[[bin]]
name = "demo"
path = "src/main.rs"
