[package]
name = "rust_black_tree"
version = "0.1.2"
authors = ["Jacob R", "Arun Woosaree <arun@woosaree.xyz>", "Alexander Rostron"]
edition = "2018"
exclude = [
    "report/*",
    "*.pdf",
]
description = "Please don't use this in something serious lol"
#documentation = ""
#homepage = ""
repository = "https://github.com/Arunscape/ECE421-GroupProject1/tree/master/rust_black_tree"
maintenance = { status = "as-is" }
license = "GPL-3.0-or-later"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1.1"
rustyline = "6.0.0"
term_size = "0.3.1"
isatty = "0.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

[lib]
name = "rust_black_trees"
path = "src/lib.rs"

[[bin]]
name = "demo"
path = "src/main.rs"


[package.metadata.docs.rs]
