[package]
name = "connect4"
version = "0.1.0"
authors = ["Jacob Reckhard <jacobreckhard@gmail.com>", "Arun Woosaree <arun@woosaree.xyz>"]
edition = "2018"
default-run="connect_game"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-Ctarget-cpu=native"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rayon = "1.3.0"

[[bin]]
name="connect_game"
path="src/main.rs"
