[package]
name = "connect4-coms"
version = "0.1.0"
authors = ["Jacob Reckhard <jacobreckhard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
connect4-lib = { path="../connect4-lib" }
serde = { version = "1.0", features = ["derive"] }
