[package]
name = "connect4-lib"
version = "0.1.0"
authors = ["Jacob Reckhard <jacobreckhard@gmail.com>", "Arun Woosaree <arun@woosaree.xyz>"]
edition = "2018"
default-run="connect_game"
license = "GPL-3.0-or-later"
description="A library containing logic and AI for connect4 and Toot and Otto"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-Ctarget-cpu=native"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rayon = "1.3.0"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name="connect_game"
path="src/main.rs"
