[package]
name = "connect4-server"
version = "0.1.0"
authors = ["Jacob Reckhard <jacobreckhard@gmail.com>", "Arun Woosaree <arun@woosaree.xyz>"]
edition = "2018"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-Ctarget-cpu=native"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "0.9.2"
bson = "0.14.1"
jsonwebtoken = "7.1.0"
connect4-lib = { path="../connect4-lib" }
connect4-coms = { path="../connect4-coms" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.51"
rand = "0.7.3"

[[bin]]
name="server"
path="src/main.rs"

[dependencies.rocket_contrib]
version = "0.4.4"
#default-features = false
#features = ["json"]
features = ["handlebars_templates", "tera_templates"]

[dependencies.rocket]
version = "0.4.4"
default-features = false
