[package]
name = "connect4-server"
version = "0.1.0"
authors = ["Jacob Reckhard <jacobreckhard@gmail.com>", "Arun Woosaree <arun@woosaree.xyz>"]
edition = "2018"
license = "GPL-3.0-or-later"
description="A server which interacts with connect4-lib"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-Ctarget-cpu=native"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "0.9.2"
bson = "0.14.1"
jsonwebtoken = "7.1.0"
connect4-lib = { version="0.1.0", path="../connect4-lib" }
connect4-coms = { version="0.1.0", path="../connect4-coms" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.51"
rand = "0.7.3"
rocket_cors = "0.5.1"
rust-argon2 = "0.8.2"
js-sys = "0.3.37"

[[bin]]
name="server"
path="src/main.rs"

[dependencies.rocket_contrib]
version = "0.4.4"
#default-features = false
features = ["handlebars_templates", "tera_templates", "json"]

[dependencies.rocket]
version = "0.4.4"
default-features = false
features = ["tls"]
