[package]
name = "connect4-web"
version = "0.1.0"
authors = ["Jacob Reckhard <jacobreckhard@gmail.com>", "Arun Woosaree <arun@woosaree.xyz>"]
edition = "2018"

[build]
target = "wasm32-unknown-unknown"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.14.3", features = ["web_sys"] }
wasm-bindgen = { version = "0.2.60", features = ["serde-serialize"] }
rayon = "1.3.0"
yew-router = { version = "0.11.0", features = ["web_sys"] }
wasm-bindgen-futures = "0.4.10"
js-sys = "0.3.37"
jsonwebtoken = "7.1.0"
connect4-lib = { path="../connect4-lib" }
connect4-coms = { path="../connect4-coms" }
web_logger = "0.2.0"
wee_alloc = "0.4.5"
rand = { version = "0.7.0", features = ["wasm-bindgen"] }
serde = "1.0"

[dependencies.web-sys]
web-sys = "*"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'DomRect',
  'MouseEvent',
  'KeyEvent',
  'Performance',
  'console',
  'EventListener',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Storage',
]
version = "0.3.37"

[lib]
name="connect_game"
path="src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.10"

